--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </body>
 
 
-        <h2>Explore the journey of Coding.</h2>
+        <h2>Explore the journey of HTML &amp; CSS.</h2>
         <p>Hello! I'm Divyanshu Pandey, a Class 12<sup>th</sup> student passionate about CSS and HTML.</p>
         <a href="#about" class="primary-btn">Explore Me</a>
         <div class="social-links">
@@ -233,7 +233,8 @@
   </section>
 
   <!-- Blog/Articles Section -->
-    <div class="container column-container">
+   <a name="blog"></a>
+    <div class="container column-container reveal-on-scroll">
       <br>
       <h1>Blog / Articles</h1>
     <div class="wrapper">
@@ -254,7 +255,7 @@
     <div class="parent-tab">
       <input type="radio" name="tab" id="tab-2">
       <label for="tab-2">
-        <span>About My Journey of Coding </span>
+        <span>About My Journey of Coading </span>
         <div class="icon"><i class="fas fa-plus"></i></div>
       </label>
       <div class="contentq">
@@ -320,7 +321,6 @@
     </div>
   </div> </div>
 <br>
-
   <!-- Contact Section -->
   <section id="contact" style="background: #1e1e1e; padding: 60px 20px;" class="reveal-on-scroll">
     <div style="max-width: 700px; margin: auto; text-align: center; color: white;" data-aos="fade-up" data-aos-duration="1200">
@@ -348,14 +348,6 @@
       </div>
     </div>
   </section>
-
-  <!-- AOS JS -->
-  
-
-
-
-
-
   <!-- yFooter Section -->
   <footer id="yFooter">
     <div class="yFooterContainer">
@@ -371,7 +363,6 @@
       </div>
     </div>
   </footer>
-
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="scripts.js"></script>
